# tictot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
tictot/: app.py  cli.py  main.py  style.css
tictot/commands/: export.py
tictot/config/: config.py
tictot/db/: __init__.py  crud.py  db.py  models.py
tictot/status/: __init__.py  status.py
tictot/store/: __init__.py  store.py
tictot/widgets/: __init__.py  entries.py  sessions.py  timer.py
