[tool.poetry]
name = "tictot"
version = "0.1.0"
description = ""
authors = ["daniarlert <arlertdaniel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = {extras = ["dev"], version = "^0.11.1"}
sqlalchemy = "^2.0.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
commitizen = "^2.42.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
