[tool.poetry]
name = "tictot"
version = "0.1.0"
description = ""
authors = ["daniarlert <arlertdaniel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = {extras = ["dev"], version = "^0.12.1"}
sqlalchemy = "^2.0.4"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
commitizen = "^2.42.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
tictot = "tictot.cli:run"

[project.scripts]
tictot = "tictot.cli:run"
