[tool.poetry]
name = "tictot"
version = "0.1.4"
description = "A time tracker for the terminal made with textual."
authors = ["daniarlert <arlertdaniel@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/daniarlert/tictot"
repository = "https://github.com/daniarlert/tictot"
keywords = ["cli", "terminal", "textual", "time management"]

[tool.poetry.dependencies]
python = "^3.11"
textual = {extras = ["dev"], version = "^0.12.1"}
sqlalchemy = "^2.0.4"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
commitizen = "^2.42.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
tictot = "tictot.cli:run"

[project.scripts]
tictot = "tictot.cli:run"
